--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-fastapi
+fastapi~=0.116.0
 uvicorn
-aiohttp
+aiohttp~=3.12.13
 google-auth
-asyncio
+asyncio~=3.4.3
 requests
 httpx
+pydantic~=2.11.7
