--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "5060:5060/udp"
       - "5060:5060/tcp"
-      - "10000-20000:10000-20000/udp"
+    # - "10000-20000:10000-20000/udp"
       - "8000:8000"
     devices:
       - "/dev/ttyUSB0:/dev/ttyUSB0"
