--- a/supervisord.conf
+++ b/supervisord.conf
@@ -9,7 +9,7 @@ autorestart=true
 
 [program:fastapi]
 directory=/app
-command=uvicorn main:app --host 0.0.0.0 --port 8000
+command=uvicorn app.main:app --host 0.0.0.0 --port 8000
 stdout_logfile=/dev/stdout
 stderr_logfile=/dev/stderr
 autorestart=true
