--- a/supervisord.conf
+++ b/supervisord.conf
@@ -1,15 +1,19 @@
 [supervisord]
 nodaemon=true
-
-[program:asterisk]
-command=/usr/sbin/asterisk -f -U root -G root
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
-autorestart=true
+user=root
 
 [program:fastapi]
 directory=/app
 command=uvicorn app.main:app --host 0.0.0.0 --port 8000
-stdout_logfile=/dev/stdout
-stderr_logfile=/dev/stderr
+stdout_logfile=/dev/fd/1 #/dev/null
+stderr_logfile=/dev/fd/2 #/dev/null
+stdout_logfile_maxbytes=0
+stderr_logfile_maxbytes=0
 autorestart=true
+
+[program:asterisk]
+# command=/usr/sbin/asterisk -f # -U root -G root
+command=/usr/sbin/safe_asterisk
+stdout_logfile=/dev/fd/1
+stderr_logfile=/dev/fd/2
+autorestart=false # safe_asterisk will do the monitoring and restart if asterisk crashes
